cmake_minimum_required(VERSION 3.25)
project(Projekt_c__)

set(CMAKE_CXX_STANDARD 23)

add_executable(Projekt_c__ main.cpp cmake-build-debug/PasswordManager.cpp cmake-build-debug/PasswordManager.h cmake-build-debug/CommunicationInterface.cpp cmake-build-debug/CommunicationInterface.h cmake-build-debug/CommunicationPanel.cpp cmake-build-debug/CommunicationPanel.h cmake-build-debug/FileManager.cpp cmake-build-debug/FileManager.h cmake-build-debug/CryptingManager.cpp cmake-build-debug/CryptingManager.h cmake-build-debug/SafetyChecker.cpp cmake-build-debug/SafetyChecker.h cmake-build-debug/UsefulMethods.cpp cmake-build-debug/UsefulMethods.h cmake-build-debug/Password.cpp cmake-build-debug/Password.h cmake-build-debug/PasswordManagerProgram.cpp cmake-build-debug/PasswordManagerProgram.h)
